# football-odds-scraper

./: .gitignore  README.md  advanced_backtester.py  app.py  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: match_alerts.yml
.streamlit/: config.toml  secrets.toml.example
UNKNOWN.egg-info/: SOURCES.txt
data/: fixture_2026.csv
football_odds_scraper/: __init__.py  advanced_backtester.py  backtest.py  cli.py  exceptions.py  models.py  odds_text_parser.py  oddspapi_client.py  onefootball_fixture.py  parser.py  pinnacle_client.py  prediction_snapshots.py  probability.py  score_predictor.py  scraper.py  selectors.py  team_colors.py  the_odds_api.py  wc_odds_scraper.py  world_cup_teams.py  worldcup_2026.py
football_odds_scraper.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
scripts/: backtest.py  backtest_model.py  send_match_alerts.py
scripts/snapshots/: .gitkeep
tests/: test_advanced_backtester.py  test_backtest.py  test_odds_text_parser.py  test_oddspapi_client.py  test_parser.py  test_pinnacle_client.py  test_prediction_snapshots.py  test_probability.py  test_score_predictor.py  test_send_match_alerts.py  test_team_colors.py  test_the_odds_api.py  test_world_cup_teams.py  test_worldcup_2026.py
tests/fixtures/: sample_football_data.csv
